--- a/VVeb.UQ/www/css/style.css
+++ b/VVeb.UQ/www/css/style.css
@@ -47,7 +47,8 @@ a
 
 body
 {
-  background-image:	url("../Logos/fast_cam.png"); background-size: cover;
+  /*background-image:	url("../Logos/fast_cam.png"); background-size: cover;*/
+  background-image:	url("../Logos/magic_pixel_back.png"); background-size: cover;
 }
 
 
