--- a/VVeb.UQ/www/css/style.css
+++ b/VVeb.UQ/www/css/style.css
@@ -1,26 +1,6 @@
 
 /* --- Main page divs --- */
 
-#wrapper
-{
-  margin:		0 auto;
-  //width:		700px;
-  width:		90%;
-  text-align:		center;
-  font-weight:		bold;
-  font-size:		20px;
-  color:		black;
-  overflow: hidden
-}
-
-#workdesk
-{
-  border:               15px solid black;
-  border-radius:        25px;
-  box-sizing:           border-box;
-  width:		100%;
-}
-
 #contact
 {
   margin:		0 auto;
@@ -28,11 +8,6 @@
   text-align:		left;
   font-weight:		bold;
   color:		black;
-}
-
-#content
-{
-  width:		100%;
 }
 
 a
@@ -47,7 +22,11 @@ body
   //background-image:	url("../Logos/magic_pixel_back.png"); background-size: cover;
   background-image:	url("../Logos/VVebUQ_background.png"); background-size: cover;
   //background-color:	lightGrey;
-  color:		black;
+  box-sizing:           border-box;
+  font-weight:          bold;
+  font-size:            20px;
+  color:                black;
+  text-align:		center;
 }
 
 .button_like
@@ -75,9 +54,12 @@ body
 #waiting_div
 {
   position:             absolute;
-  width:		60%;
+  margin-left:		5%;
+  width:		90%;
+  top:			5%;
+  height:		80%;
   z-index:		3000;
-  border: 		20px solid #600000;
+  border: 		20px solid #6E978D;
   border-radius:        25px;
   background-color: 	rgba(200, 200, 200, 0.9);
   text-align: 		center;
@@ -117,6 +99,8 @@ body
   color:		white;
   text-align:		left;
   overflow-wrap: 	normal;
+  font-weight: 		normal;
+  font-size:		12px;
 }
 
 
@@ -124,16 +108,31 @@ body
 
 /* --- Style of working tabs ---  */
 
+:root
+{
+  --leftmargin: 20%;
+  --leftmargin_space: 22%;
+  --rightmargin: 75%;
+}
+
 .tab
 {
+  float: 		left;
+  width: 		var(--leftmargin);
   overflow: 		hidden;
   border: 		1px solid #ccc;
   border-radius: 	10px;
   background-color: 	#f1f1f1;
 }
 
+#VVebUQ_logo
+{
+  width:		100%;
+}
+
 .tab button
 {
+  width: 		100%;
   background-color: 	inherit;
   float: 		left;
   border: 		none;
@@ -143,6 +142,8 @@ body
   transition: 		0.3s;
   font-size: 		30px;
   font-weight: 		bold;
+  text-align:           left;
+  display: 		block;
 }
 
 .tab div
@@ -151,13 +152,12 @@ body
   float: 		left;
   border: 		none;
   outline: 		none;
-  padding: 		none;
+  padding: 		5px 5px;
   cursor: 		pointer;
   transition: 		0.3s;
   font-size: 		30px;
   font-weight: 		bold;
 }
-
 
 .tab button:hover
 {
@@ -171,15 +171,40 @@ body
 
 .tabcontent
 {
+  margin-left: 		var(--leftmargin_space);
+  width: 		var(--rightmargin);
   min-height: 		400px;
-  display: 		none;
-  padding: 		6px 12px;
+  padding: 		10px 10px;
   border: 		1px solid #ccc;
   border-radius: 	10px;
   border-top: 		none;
+  border-left: 		none;
   background-color: 	rgba(0, 0, 0, 0.7);
   color: 		white;
+  display:table;
 }
 
+
+
+
+
+/* --- Column widths --- */
+#setup_column_1{display: table-cell; text-align: left; width: 30%;}
+#setup_column_2{display: table-cell; text-align: left; width: 40%;}
+#setup_column_3{display: table-cell; text-align: left;}
+
+#cloud_column_1{display: table-cell; text-align: left; width: 30%;}
+#cloud_column_2{display: table-cell; text-align: left; width: 50%;}
+#cloud_column_3{display: table-cell; text-align: left;}
+
+#input_column_1{display: table-cell; text-align: left; width: 35%;}
+#input_column_2{display: table-cell; text-align: left; width: 35%;}
+#input_column_3{display: table-cell; text-align: left;}
+
+#run_column_1{display: table-cell; text-align: left; width: 20%;}
+#run_column_2{display: table-cell; text-align: left; width: 80%;}
+
+#result_column_1{display: table-cell; text-align: left; width: 50%;}
+#result_column_2{display: table-cell; text-align: left;}
 
 
