--- a/VVeb.UQ/www/css/style.css
+++ b/VVeb.UQ/www/css/style.css
@@ -1,4 +1,16 @@
 
+/* --- External variables --- */
+:root
+{
+  /* Proportions of left tabs and main page */
+  --leftmargin: 	20%;
+  --leftmargin_space: 	22%;
+  --rightmargin: 	75%;
+  /* Font family for main pages */
+  --myfontfamily: 	Arial, Helvetica, sans-serif;
+
+}
+
 /* --- Main page divs --- */
 
 #contact
@@ -8,12 +20,15 @@
   text-align:		left;
   font-weight:		bold;
   color:		black;
+  font-family: 		var(--myfontfamily);
+  font-size:            14px;
 }
 
 a
 {
   color:		black;
   background-color:	lightblue;
+  font-family: 		var(--myfontfamily);
 }
 
 body
@@ -27,6 +42,7 @@ body
   font-size:            20px;
   color:                black;
   text-align:		center;
+  font-family: 		var(--myfontfamily);
 }
 
 .button_like
@@ -63,12 +79,14 @@ body
   border-radius:        25px;
   background-color: 	rgba(200, 200, 200, 0.9);
   text-align: 		center;
+  font-family: 		var(--myfontfamily);
 }
 
 #waiting_message
 {
   font-weight: 		bold;
   font-size:		20px;
+  font-family: 		var(--myfontfamily);
 }
 
 #waiting_gif
@@ -108,13 +126,6 @@ body
 
 /* --- Style of working tabs ---  */
 
-:root
-{
-  --leftmargin: 	20%;
-  --leftmargin_space: 	22%;
-  --rightmargin: 	75%;
-}
-
 .tab
 {
   float: 		left;
@@ -144,6 +155,7 @@ body
   font-weight: 		bold;
   text-align:           left;
   display: 		block;
+  font-family: 		var(--myfontfamily);
 }
 
 .tab div
@@ -157,6 +169,7 @@ body
   transition: 		0.3s;
   font-size: 		20px;
   font-weight: 		bold;
+  font-family: 		var(--myfontfamily);
 }
 
 .tab button:hover
@@ -182,6 +195,7 @@ body
   background-color: 	rgba(0, 0, 0, 0.7);
   color: 		white;
   display:		table;
+  font-family: 		var(--myfontfamily);
 }
 
 
